tests/paczka1/small_fuzzy/89591278.err
Error in line 3: MnhaRaCin A388 186,2
Error in line 9: MnhaRaCin S816 29,7
Error in line 7: f1U4rj S157 84,1
